--- a/src/pages/SearchResults/SearchResults.css
+++ b/src/pages/SearchResults/SearchResults.css
@@ -436,6 +436,7 @@ label {
     width: 100%;
     padding: 10px;
     font-size: 16px;
+    background-color: #446e9c;
   }
 
   .date-display .date-number {
