--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -1,4 +1,3 @@
-
 .layout {
   min-height: 100vh;
   display: flex;
@@ -14,6 +13,7 @@
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
+  background-color: white;
 }
 
 @media (max-width: 1024px) {
@@ -34,9 +34,7 @@
     max-width: 100%; /* Đặt max-width để giới hạn chiều rộng tối đa */
     margin-top: 80px;
     width: 100%;
-   
   }
-
 }
 
 /* body {
