--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,7 @@
-.main-home{
+.main-home {
   max-width: 100vw;
   overflow: hidden;
+  background-color: white;
 }
 
 .search-bar {
@@ -194,4 +195,3 @@
 .scrolled-title {
   display: none;
 }
-
