--- a/src/pages/SearchResults/SearchResults.css
+++ b/src/pages/SearchResults/SearchResults.css
@@ -185,12 +185,12 @@ label {
 
 .carousel-slide {
   padding: 0 10px;
-  height: 450px;
+  height: 450px; /* Chiều cao cố định như ảnh bạn gửi */
 }
 
 .image-wrapper {
   width: 100%;
-  height: 60vh;
+  height: 300px; /* cố định cho cả desktop + mobile */
   overflow: hidden;
   position: relative;
 }
@@ -301,11 +301,6 @@ label {
     font-size: 15px;
     padding: 6px 12px;
   }
-  .image-wrapper {
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
-  }
 }
 
 @media (max-width: 480px) {
@@ -357,11 +352,6 @@ label {
   .carousel-address {
     font-size: 13px;
   }
-  .image-wrapper {
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
-  }
 }
 
 @media (max-width: 768px) {
@@ -384,7 +374,7 @@ label {
 
   .image-wrapper {
     width: 100%;
-    height: 300px;
+    min-height: 200px;
     overflow: hidden;
   }
 
