--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,13 +3,13 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 110px;
+  height: 100px;
   z-index: 1000;
   border-bottom: 1px solid gray;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
 }
-.header-logo {
+.header1-logo {
   width: 115px;
   height: 80px;
   object-fit: contain;
@@ -36,7 +36,7 @@
   align-items: center; /* Ensure vertical alignment */
   width: 700px;
   padding-left: 220px;
-  padding-top: 15px;
+  padding-top: 5px;
 }
 .header-nav-container {
   display: flex;
@@ -193,7 +193,7 @@
     height: 70px;
   }
 
-  .header-logo {
+  .header1-logo {
     width: 150px;
     height: 70px;
   }
@@ -269,7 +269,7 @@
     height: 3px;
     background-color: #333;
   }
-  .header-logo {
+  .header1-logo {
     float: left;
   }
 }
